# PLSSVM

./: CMakeLists.txt
.github/workflows/: msvc_windows.yml
cmake/: add_coverage_build_type.cmake
include/plssvm/: core.hpp  csvm.hpp  data_set.hpp  matrix.hpp  parameter.hpp  preconditioner_types.hpp
include/plssvm/backends/: gpu_csvm.hpp
include/plssvm/backends/OpenMP/kernel/: predict_kernel.hpp
include/plssvm/backends/OpenMP/kernel/cg_explicit/: blas.hpp  kernel_matrix_assembly.hpp
include/plssvm/backends/OpenMP/kernel/cg_implicit/: kernel_matrix_assembly_blas.hpp
include/plssvm/backends/SYCL/AdaptiveCpp/: csvm.hpp
include/plssvm/backends/SYCL/detail/: linalg.hpp  matrix_view.hpp  preconditioners.hpp
include/plssvm/detail/cmd/: parser_train.hpp
src/: main_train.cpp
src/plssvm/: csvm.cpp  preconditioner_types.cpp
src/plssvm/backends/OpenMP/: csvm.cpp
src/plssvm/backends/SYCL/: CMakeLists.txt
src/plssvm/backends/SYCL/AdaptiveCpp/: csvm.cpp
src/plssvm/backends/SYCL/tests/: CMakeLists.txt  linalg_test.cpp  matrix_view_test.cpp  preconditioners_test.cpp
src/plssvm/detail/cmd/: parser_train.cpp
